# youtube_live_info

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-31-youtube-live-topic-finder.md
docs/superpowers/specs/: 2026-05-31-youtube-live-topic-finder-design.md
src/topicfinder/: __init__.py  __main__.py  app.py  collector.py  config.py  filtering.py  llm.py  models.py  scheduler.py  scoring.py  store.py  topic_engine.py
src/topicfinder/web/: app.js  index.html
tests/: test_app.py  test_collector.py  test_config.py  test_filtering.py  test_llm.py  test_models.py  test_scheduler.py  test_scoring.py  test_store.py  test_topic_engine.py
tests/fixtures/: live_chat_lines.py  llm_response.json  sample_chats.py
