[project]
name = "topicfinder"
version = "0.1.0"
description = "유튜브 라이브 동일 주제 탐지기"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "yt-dlp>=2024.1.1",
    "chat-downloader>=0.2.8",
    "kiwipiepy>=0.17",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
